--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
+    ext {
+        kotlin_version = "1.5.10"
+        hilt_version = "2.35"
+    }
     repositories {
         google()
         mavenCentral()
@@ -11,6 +14,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
@@ -24,4 +29,13 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+// app dependencies
+ext {
+    lifecycle_version = "2.3.1"
+    hiltAndroidXVersion = '1.0.0-alpha03'
+    arch_version = "2.1.0"
+    retrofit_version = '2.9.0'
+    fragment_version = "1.3.4"
 }
